pre-finish float

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
         </div>
 
         <div class="line3 clearfix">
-
+            <div class="line3_1_box"></div>
+            <div class="line3_2_box"></div>
+            <div class="line3_3_box"></div>
+            <div class="line3_4_box">
+                <div class="line3_5_box"></div>
+                <div class="line3_6_box"></div>
+            </div>
+            <!-- <div class="line3_4_box"></div>
+            <div class="line3_5_box"></div> -->
         </div>
 
 
