--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <div class="container">
 
         <div class="line1 clearfix">
-            <div class="line1_box">TEST1</div>
-            <div class="line1_box">TEST2</div>
-            <div class="line1_box">TEST3</div>
+            <div class="line1_box"></div>
+            <div class="line1_box"></div>
+            <div class="line1_box"></div>
         </div>
         <div class="line2 clearfix">
-           <div>
-                <div class="line2_left_box">TEST1</div>
-                <div class="line2_left_box">TEST2</div>
+           <div class="line2_left_box">
+                <div class="line2_left_block"></div>
+                <div class="line2_left_block"></div>
             </div> 
 
-            <div>
-                <div class="line2_right_box">TEST3</div>
-                <div class="line2_right_box">TEST4</div>
-                <div class="line2_right_box">TEST5</div>
+            <div class="line2_right_box">
+                <div class="line2_right_block"></div>
+                <div class="line2_right_block"></div>
+                <div class="line2_right_block"></div>
             </div>
         </div>
 
@@ -37,8 +37,6 @@
                 <div class="line3_5_box"></div>
                 <div class="line3_6_box"></div>
             </div>
-            <!-- <div class="line3_4_box"></div>
-            <div class="line3_5_box"></div> -->
         </div>
 
 
